--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Shubham Kumar",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "util": "^0.12.3"
   }
 }
